# plc_t

./: .gitignore  COPYING.md  INSTALL.rst  LICENSE.txt  PKG-INFO  README.md  README.txt  acceleration_sensor_client.py  acceleration_sensor_logger.py  camera_server.py  check_real_time_difference.py  communication_statistic.py  debug_controller.py  default_plc.cfg  digital_controller_client.py  digital_controller_server.py  example_pattern_4_channels.cfg  info.rst  logs2housekeeping.py  plc.py  plc_manual.rst  pressure_mks_651_client.py  pressure_mks_651_server.py  pyproject.toml  rplc.py  setup.py
examples/: example_pattern_12_channels.cfg  example_setpoints.cfg  plc_viewer.py  pressure_mks_651_client.py  pressure_mks_651_server.py  pressure_mks_900_client.py  pressure_mks_900_server.py
plc/: CHANGELOG.txt  __init__.py  acceleration_sensor_server.py  init.pyi  multi_purpose_controller_client.py  plc.py  rawmovie2tiff.py  rawmovies2recordings.py  rawmovieviewer.py  translation_stage_scan.py  trigger.py
plc/clients/: __init__.py  camera_client.py  digital_controller.py  multi_purpose_controller_client.py  multi_purpose_controller_server.py
plc/misc/: distance_from_picture.py  environment_sensor_5_logger.py  rawmovie2pngs.py
plc/plc_gui/: __init__.py  base_controller.py  camera.py  class_rf_generator.py  controller.py  diagnostic_particles.py  digital_controller.py  electrode_motion.py  electrode_motion_controller.py  gas_system.py  init.pyi  multi_purpose_controller.py  plc.py  plc.pyi  plcclientserverclass.py  read_config_file.py  rf_generator.py  rf_generator_controller.py  translation_stage.py  translation_stage_controller.py  utils.py
plc/plc_tools/: __init__.py  conversion.py  plc_socket_communication.py  plc_viewer_gui.py  plc_viewer_main_directory.py  plc_viewer_main_file.py  plc_viewer_play_log_gui.py  plccameraguidefaultclass.py  (+2 more)
plc_gui/: __init__.py  acceleration_sensor.py  class_rf_generator.py  diagnostic_particles.py  digital_controller.py  electrode_motion.py  electrode_motion_controller.py  plcclientserverclass.py  read_config_file.py  rf_generator.py  translation_stage_controller.py
plc_tools/: conversion.py  plc_socket_communication.py  plc_viewer_gui.py  plc_viewer_movietime.py  plc_viewer_play_gui.py  plc_viewer_play_rflog_gui.py  plccameraguidefaultclass.py  plclogclasses.py
tests/: default_plc.cfg  red.sh  sc.py  st.sh  tests.ipynb  vsp.py
(+7 files in other folders)
